--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,34 +1,9 @@
 html {
-  font-family: Helvetica;
+  font-family: Verdana;
 }
 
-img {
-  height: 250px;
-  width: 250px;
-}
 
-h1 {
-  font-family: Helvetica;
-  font-size: 100px;
-  font-weight: bold;
-  color: khaki;
-  text-align: center;
-  background-image: url(../img/pattern.jpeg);
-}
-
-h2 {
-  font-family: Helvetica;
-  font-size: 32px;
-  font-weight: bold;
-  color: white;
-}
-
-.download {
-  color: aquamarine;
-  font-size: 16px;
-}
-
-.title {
+ h1 {
   font-family: Verdana;
   font-weight:  normal;
   font-size: 50px;
@@ -36,6 +11,42 @@ h2 {
   text-align: center;
 }
 
+h2 {
+  font-family: Verdana;
+  font-weight:  300;
+  font-size: 42px;
+  color: white;
+  text-align: center;
+}
+
 body {
   background-color: black;
+}
+
+.download {
+  color: aquamarine;
+  font-size: 16px;
+}
+
+.copyright {
+  text-align: right;
+  color: gray;
+  padding-right: 30px;
+}
+
+video {
+  display: block;
+  margin: 0 auto;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
+p {
+  font-family: Verdana;
+  font-size: 21px;
+  color: grey;
+  text-align: center;
 }
